--- a/views/recipes/view.pug
+++ b/views/recipes/view.pug
@@ -7,3 +7,9 @@ block content
       .row.mb-4
         .col-md-8
           h1.mb-3= recipe.title
+    else
+      .alert.alert-warning
+        h2.text-center Recipe not found
+        p.text-center The recipe you're looking for might have been removed or doesn't exist.
+        .text-center.mt-4
+          a.btn.btn-primary(href="/explore") Explore Recipes
